syntax = "proto3";

package Hal;

enum DMesgTypePb
{
  INVALID = 0;
  sys     = 1;
  message = 2;
}
